--- a/jobs/train_self_supervised/example/config.yml
+++ b/jobs/train_self_supervised/example/config.yml
@@ -1,7 +1,9 @@
 job_type: train_self_supervised
 workspace_path: C:/workspace/tgn-workspace
 training:
+  device: cpu
+  num_epoch: 10
+  backprop_every: 10
   train_batch_size: 128
   eval_batch_size: 128
-  num_epoch: 5
-  backprop_every: 10
+  evaluation_seed: 1024
