GraphAttn could run, but the result is a little bit lower than the original implementation.

--- a/jobs/train_self_supervised/example/config.yml
+++ b/jobs/train_self_supervised/example/config.yml
@@ -1,9 +1,14 @@
 job_type: train_self_supervised
-workspace_path: C:/workspace/tgn-workspace
+workspace_path: /home/huoranli/tgn-workspace
+data:
+  uniform: False
+  randomize_features: False
+  different_new_nodes: False
 training:
   device: cpu
-  num_epoch: 10
-  backprop_every: 10
-  train_batch_size: 128
-  eval_batch_size: 128
+  num_epoch: 100
+  backprop_every: 1
+  train_batch_size: 200
+  eval_batch_size: 200
   evaluation_seed: 1024
+  learning_rate: 0.0001
