--- a/jobs/train_self_supervised/example/config.yml
+++ b/jobs/train_self_supervised/example/config.yml
@@ -8,7 +8,8 @@ training:
   device: cpu
   num_epoch: 100
   backprop_every: 1
+  early_stop: 5
   train_batch_size: 200
   eval_batch_size: 200
-  evaluation_seed: 1024
+  evaluation_seed: 0
   learning_rate: 0.0001
