--- a/jobs/example/train/supervised/config.yml
+++ b/jobs/example/train/supervised/config.yml
@@ -11,4 +11,4 @@ training:
   train_batch_size: 100
   eval_batch_size: 200
   learning_rate: 0.0003
-  embedding_model_version: test_self_supervised
+  embedding_model_version: night_self_supervised
